@@ -18,13 +18,14 @@
  */
 package org.apache.pulsar.common.configuration;
 
-import static com.google.common.base.Preconditions.checkNotNull;
+import static java.util.Objects.requireNonNull;
 import static org.apache.pulsar.common.util.FieldParser.update;
 
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.util.Arrays;
 import java.util.Map;
@@ -51,7 +52,7 @@ public class PulsarConfigurationLoader {
      */
     public static <T extends PulsarConfiguration> T create(String configFile,
             Class<? extends PulsarConfiguration> clazz) throws IOException, IllegalArgumentException {
-        checkNotNull(configFile);
+        requireNonNull(configFile);
         try (InputStream inputStream = new FileInputStream(configFile)) {
             return create(inputStream, clazz);
         }
@@ -70,7 +71,7 @@ public class PulsarConfigurationLoader {
     public static <T extends PulsarConfiguration> T create(InputStream inStream,
             Class<? extends PulsarConfiguration> clazz) throws IOException, IllegalArgumentException {
         try {
-            checkNotNull(inStream);
+            requireNonNull(inStream);
             Properties properties = new Properties();
             properties.load(inStream);
             return (create(properties, clazz));
@@ -91,13 +92,14 @@ public class PulsarConfigurationLoader {
     @SuppressWarnings({ "rawtypes", "unchecked" })
     public static <T extends PulsarConfiguration> T create(Properties properties,
             Class<? extends PulsarConfiguration> clazz) throws IOException, IllegalArgumentException {
-        checkNotNull(properties);
+        requireNonNull(properties);
         T configuration = null;
         try {
-            configuration = (T) clazz.newInstance();
+            configuration = (T) clazz.getDeclaredConstructor().newInstance();
             configuration.setProperties(properties);
             update((Map) properties, configuration);
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException
+                | NoSuchMethodException | InvocationTargetException e) {
             throw new IllegalArgumentException("Failed to instantiate " + clazz.getName(), e);
         }
         return configuration;
@@ -115,7 +117,7 @@ public class PulsarConfigurationLoader {
      * @throws IllegalAccessException
      */
     public static boolean isComplete(Object obj) throws IllegalArgumentException {
-        checkNotNull(obj);
+        requireNonNull(obj);
         Field[] fields = obj.getClass().getDeclaredFields();
         StringBuilder error = new StringBuilder();
         for (Field field : fields) {
@@ -177,7 +179,8 @@ public class PulsarConfigurationLoader {
      */
     public static ServiceConfiguration convertFrom(PulsarConfiguration conf, boolean ignoreNonExistMember) throws RuntimeException {
         try {
-            final ServiceConfiguration convertedConf = ServiceConfiguration.class.newInstance();
+            final ServiceConfiguration convertedConf = ServiceConfiguration.class
+                    .getDeclaredConstructor().newInstance();
             Field[] confFields = conf.getClass().getDeclaredFields();
             Arrays.stream(confFields).forEach(confField -> {
                 try {
@@ -196,9 +199,8 @@ public class PulsarConfigurationLoader {
                 }
             });
             return convertedConf;
-        } catch (InstantiationException e) {
-            throw new RuntimeException("Exception caused while converting configuration: " + e.getMessage());
-        } catch (IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException
+                | InvocationTargetException | NoSuchMethodException e) {
             throw new RuntimeException("Exception caused while converting configuration: " + e.getMessage());
         }
     }
