@@ -18,6 +18,7 @@
  */
 package org.apache.pulsar.common.stats;
 
+import static org.apache.pulsar.common.util.Runnables.catchingAndLoggingThrowables;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
 import io.netty.buffer.PoolArenaMetric;
@@ -71,7 +72,8 @@ public class JvmMetrics {
         JvmGCMetricsLogger gcLoggerImpl = null;
         if (StringUtils.isNotBlank(gcLoggerImplClassName)) {
             try {
-                gcLoggerImpl = (JvmGCMetricsLogger) Class.forName(gcLoggerImplClassName).newInstance();
+                gcLoggerImpl = (JvmGCMetricsLogger) Class.forName(gcLoggerImplClassName)
+                        .getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 log.error("Failed to initialize jvmGCMetricsLogger {} due to {}", jvmGCMetricsLoggerClassName,
                         e.getMessage(), e);
@@ -95,7 +97,7 @@ public class JvmMetrics {
     public JvmMetrics(ScheduledExecutorService executor, String componentName, JvmGCMetricsLogger gcLogger) {
         this.gcLogger = gcLogger;
         if (executor != null) {
-            executor.scheduleAtFixedRate(gcLogger::refresh, 0, 1, TimeUnit.MINUTES);
+            executor.scheduleAtFixedRate(catchingAndLoggingThrowables(gcLogger::refresh), 0, 1, TimeUnit.MINUTES);
         }
         this.componentName = componentName;
     }
